--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,5 +4,7 @@ security.oauth2.client.grant-type = authorization_code
 security.oauth2.client.access-token-uri = https://login.salesforce.com/services/oauth2/token
 security.oauth2.client.user-authorization-uri = https://login.salesforce.com/services/oauth2/authorize
 security.oauth2.resource.user-info-uri = https://login.salesforce.com/services/oauth2/userinfo
+security.oauth2.client.client-id = YOUR_SALESFORCE_CONNECTED_APP_CLIENT_ID
+security.oauth2.client.client-secret = YOUR_SALESFORCE_CONNECTED_APP_CLIENT_SECRET
 
 #logging.level.org.springframework.security = DEBUG
